--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,16 +44,11 @@
         <activity android:name=".KoinHistory" />
         <activity
             android:name=".CreateAccountActivity"
-            android:theme="@style/NoTitleBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/NoTitleBar"></activity>
         <activity
             android:name=".ResetPasswordActivity"
-            android:theme="@style/NoTitleBar"></activity>
+            android:theme="@style/NoTitleBar" />
+        <activity android:name=".ProfileActivity"></activity>
     </application>
 
 </manifest>
