--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
             android:theme="@style/NoTitleBar" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".BulletinActivity" />
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".QRCodeSendKoinActivity"></activity>
     </application>
 
 </manifest>
