--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,10 +79,10 @@
             android:theme="@style/NoTitleBar" />
         <activity
             android:name=".OwnQrCode"
-            android:theme="@style/NoTitleBar">
-
-
-        </activity>
+            android:theme="@style/NoTitleBar" />
+        <activity
+            android:name=".TreeQrCode"
+            android:theme="@style/NoTitleBar"/>
     </application>
 
 </manifest>
