--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -85,7 +85,10 @@
             android:theme="@style/NoTitleBar" />
         <activity
             android:name=".CreateQrCodeToSendKoin"
-            android:theme="@style/NoTitleBar"/>
+            android:theme="@style/NoTitleBar" />
+        <activity
+            android:name=".BuletinPage"
+            android:theme="@style/NoTitleBar" />
     </application>
 
 </manifest>
