--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.synnapps:carouselview:0.1.4'
+    implementation 'me.relex:circleindicator:1.2.2@aar'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
